Separated public endpoints and secure endpoints and  hashed password storing